<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flashcard Quiz App</string>

    <string name="good_morning">Hello 👋</string>
    <string name="ready_to_sharpen">Ready to sharpen your mind?</string>
    <string name="your_study_deck">📚  Your Study Deck</string>
    <string name="zero">0</string>
    <string name="flashcards">Flashcards</string>
    <string name="start_studying">Start Studying</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="add">+</string>
    <string name="add_card">Add Card</string>
    <string name="study_icon">📖</string>
    <string name="study">Study</string>
    <string name="your_progress">Your Progress</string>
    <string name="cards_studied">Cards studied</string>
    <string name="manage_flashcards">Manage Flashcards</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="create_new_card">Create a new card for your study deck</string>
    <string name="question">Question</string>
    <string name="enter_question">Enter your question...</string>
    <string name="answer">Answer</string>
    <string name="enter_answer">Enter the answer...</string>
    <string name="save_flashcard">Save Flashcard</string>
    <string name="cancel">Cancel</string>

</resources>